src/test/deca/codegen/valid/non_object_overflow_mul_positive_and_negative_integer.deca
// @result -524304
/*
    Description : Test sur la gestion de la multiplication d'un entier positif et d'un entier négatif entrainant un overflow
    
    Résultat : A définir...
*/

{
    println(65540*-65540);
    //println("Si il est affiché au dessus -524304, test probablement réussi !");
}
